# voigt.github.io

./: .gitignore  .gitmodules  .pages.yml  .travis.yml  CNAME  README.md  config.toml  index.html  index.xml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: hugo.yml  spin.yaml
about/: index.html  index.xml
assets/css/: custom.css
assets/js/: processSpin.js  spin.js
blog/: .travis.yml
config/_default/: config.toml  languages.en.toml  menus.en.toml  params.toml  services.toml
content/: _index.md  about.md  cv.md  links.md  talks.md
content/about/: index.md
content/notes/: _index.md  dummy.md  ephemeral-container-registry.md  following-logs-from-multiple-kubernetes-pods.md  golang-cmp-or.md  justfile.md  learn-rust-generics.md  learn-rust-match-statement.md  learn-rust-questionmark.md  learn-rust-rust-enums.md  learn-rust-tests.md  unable-to-find-zig-installation-directory-filenotfound.md
content/now/: 2022-05-23.md  2023-05-21.md  _index.md
content/post/: 01_dummy.md  custom_request_headers.md  good-to-great.md  handle_json_config_in_go.md  hugo_github_pages.md  sqlite_basic_usage.md
content/posts/: 2019-recap.md  _index.md  heise-rust-intro.md  one-year-of-consulting.md  openbao-namespaces-announcement.md
content/talks/: index.md
infra/: .gitignore  README.md  main.tf
layouts/_default/: index.rss.xml  single.html
layouts/_shortcodes/: now.html
post/: index.html  index.xml
public/: index.html  index.xml
spin/: .gitignore  spin.toml
spin/api/: Cargo.toml
spin/api/src/: lib.rs
(+21 files in other folders)
