[package]
name = "api"
authors = ["Christoph Voigt <voigt.christoph@gmail.com>"]
description = "cool api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.1"

[workspace]
